plugins {
	id 'org.springframework.boot' version '2.3.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
	id 'war'
	id 'idea'
	id 'checkstyle'
	id 'jacoco'
	id 'org.sonarqube' version '3.0'
}

group = 'com.softserveinc'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '8'

bootRun {
	main = "com.softserveinc.dokazovi"
}

war {
	enabled = true
}

checkstyleMain {
	configFile = file("${rootDir}/checkstyle.xml")
}

checkstyleTest {
	configFile = file("${rootDir}/checkstyle.xml")
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.flywaydb:flyway-core'
	implementation "org.mapstruct:mapstruct:${MAPPER_VERSION}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${MAPPER_VERSION}"
	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${MAPPER_VERSION}"
	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"

	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	runtimeOnly 'org.postgresql:postgresql'

	testImplementation "com.h2database:h2"
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}

jacoco {
	toolVersion = "0.8.5"
}

jacocoTestReport {
	dependsOn test
	reports {
		html.enabled true
		xml.enabled true
		csv.enabled false
	}
}

sonarqube {
	tasks['sonarqube'].dependsOn jacocoTestReport
	properties {
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.sources", "src/main"
		property "sonar.tests", "src/test"
		property "sonar.organization", System.getenv("SONAR_ORGANIZATION")
		property "sonar.projectKey", System.getenv("SONAR_PROJECT_KEY")
		property "sonar.login", System.getenv("SONAR_LOGIN")
		property "sonar.jacoco.reportPaths", "$buildDir/reports/jacoco/test/jacocoTestReport.xml"
		property "sonar.junit.reportPaths", "$buildDir/test-results/test/"
		property "sonar.exclusions", "**/*.sql"
	}
}